# color-names

./: .gitmodules  Cargo.toml  README.md  build.rs
crates/colorsnamed/: Cargo.toml
crates/colorsnamed-basic/: Cargo.toml  build.rs
crates/colorsnamed-basic/src/: lib.rs
crates/colorsnamed-best-of/: Cargo.toml  build.rs
crates/colorsnamed-chinese-traditional/: Cargo.toml  build.rs
crates/colorsnamed-complete/: Cargo.toml  build.rs
crates/colorsnamed-core/: Cargo.toml
crates/colorsnamed-core/data/: colorlists.json  colornames.csv
crates/colorsnamed-core/src/: lib.rs
crates/colorsnamed-french/: Cargo.toml  build.rs
crates/colorsnamed-german/: Cargo.toml  build.rs
crates/colorsnamed-german/src/: lib.rs
crates/colorsnamed-hindi/: Cargo.toml  build.rs
crates/colorsnamed-html/: Cargo.toml  build.rs
crates/colorsnamed-japanese-traditional/: Cargo.toml  build.rs
crates/colorsnamed-le-corbusier/: Cargo.toml  build.rs
crates/colorsnamed-nbs-iscc/: Cargo.toml  build.rs
crates/colorsnamed-ntc/: Cargo.toml  build.rs
crates/colorsnamed-osxcrayons/: Cargo.toml  build.rs
crates/colorsnamed-ral/: Cargo.toml  build.rs
crates/colorsnamed-ridgway/: Cargo.toml  build.rs
crates/colorsnamed-risograph/: Cargo.toml  build.rs
crates/colorsnamed-sanzo-wada-i/: Cargo.toml  build.rs
crates/colorsnamed-short/: Cargo.toml  build.rs
crates/colorsnamed-spanish/: Cargo.toml  build.rs
crates/colorsnamed-thesaurus/: Cargo.toml  build.rs
crates/colorsnamed-werner/: Cargo.toml  build.rs
crates/colorsnamed-wikipedia/: Cargo.toml  build.rs
crates/colorsnamed-windows/: Cargo.toml  build.rs
crates/colorsnamed-x11/: Cargo.toml  build.rs
crates/colorsnamed-xkcd/: Cargo.toml  build.rs
crates/colorsnamed/src/: lib.rs
src/: lib.rs  main.rs
