[workspace]
resolver = "2"
members = [
    "crates/colorsnamed",
    "crates/colorsnamed-core",
    "crates/colorsnamed-basic",
    "crates/colorsnamed-html",
    "crates/colorsnamed-xkcd",
    "crates/colorsnamed-x11",
    "crates/colorsnamed-ral",
    "crates/colorsnamed-ridgway",
    "crates/colorsnamed-werner",
    "crates/colorsnamed-windows",
    "crates/colorsnamed-wikipedia",
    "crates/colorsnamed-french",
    "crates/colorsnamed-spanish",
    "crates/colorsnamed-german",
    "crates/colorsnamed-hindi",
    "crates/colorsnamed-risograph",
    "crates/colorsnamed-chinese-traditional",
    "crates/colorsnamed-japanese-traditional",
    "crates/colorsnamed-le-corbusier",
    "crates/colorsnamed-nbs-iscc",
    "crates/colorsnamed-ntc",
    "crates/colorsnamed-osxcrayons",
    "crates/colorsnamed-sanzo-wada-i",
    "crates/colorsnamed-thesaurus",
    "crates/colorsnamed-complete",
    "crates/colorsnamed-short",
    "crates/colorsnamed-best-of",
]

[workspace.lints.rust]
unused = "warn"
unreachable_patterns = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
cargo = "warn"
manual_let_else = "warn"
uninlined_format_args = "warn"
