[workspace]
resolver = "2"
members = [
    "crates/colorsnamed",
    "crates/colorsnamed-core",
    "crates/colorsnamed-basic",
    "crates/colorsnamed-html",
    "crates/colorsnamed-xkcd",
    "crates/colorsnamed-x11",
    "crates/colorsnamed-ral",
    "crates/colorsnamed-ridgway",
    "crates/colorsnamed-werner",
    "crates/colorsnamed-windows",
    "crates/colorsnamed-wikipedia",
    "crates/colorsnamed-french",
    "crates/colorsnamed-spanish",
    "crates/colorsnamed-german",
    "crates/colorsnamed-hindi",
    "crates/colorsnamed-risograph",
    "crates/colorsnamed-chinese-traditional",
    "crates/colorsnamed-japanese-traditional",
    "crates/colorsnamed-le-corbusier",
    "crates/colorsnamed-nbs-iscc",
    "crates/colorsnamed-ntc",
    "crates/colorsnamed-osxcrayons",
    "crates/colorsnamed-sanzo-wada-i",
    "crates/colorsnamed-thesaurus",
    "crates/colorsnamed-complete",
    "crates/colorsnamed-short",
    "crates/colorsnamed-best-of",
]

[workspace.dependencies]
color = "0.3.2"
rgb = "0.8.50"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
num2words = "1.2.0"
csv = "1.3.1"
heck = "0.5.0"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
colorsnamed-core = { path = "crates/colorsnamed-core" }
colorsnamed-basic = { path = "crates/colorsnamed-basic" }
colorsnamed-html = { path = "crates/colorsnamed-html" }
colorsnamed-xkcd = { path = "crates/colorsnamed-xkcd" }
colorsnamed-x11 = { path = "crates/colorsnamed-x11" }
colorsnamed-ral = { path = "crates/colorsnamed-ral" }
colorsnamed-ridgway = { path = "crates/colorsnamed-ridgway" }
colorsnamed-werner = { path = "crates/colorsnamed-werner" }
colorsnamed-windows = { path = "crates/colorsnamed-windows" }
colorsnamed-wikipedia = { path = "crates/colorsnamed-wikipedia" }
colorsnamed-french = { path = "crates/colorsnamed-french" }
colorsnamed-spanish = { path = "crates/colorsnamed-spanish" }
colorsnamed-german = { path = "crates/colorsnamed-german" }
colorsnamed-hindi = { path = "crates/colorsnamed-hindi" }
colorsnamed-risograph = { path = "crates/colorsnamed-risograph" }
colorsnamed-chinese-traditional = { path = "crates/colorsnamed-chinese-traditional" }
colorsnamed-japanese-traditional = { path = "crates/colorsnamed-japanese-traditional" }
colorsnamed-le-corbusier = { path = "crates/colorsnamed-le-corbusier" }
colorsnamed-nbs-iscc = { path = "crates/colorsnamed-nbs-iscc" }
colorsnamed-ntc = { path = "crates/colorsnamed-ntc" }
colorsnamed-osxcrayons = { path = "crates/colorsnamed-osxcrayons" }
colorsnamed-sanzo-wada-i = { path = "crates/colorsnamed-sanzo-wada-i" }
colorsnamed-thesaurus = { path = "crates/colorsnamed-thesaurus" }
colorsnamed-complete = { path = "crates/colorsnamed-complete" }
colorsnamed-short = { path = "crates/colorsnamed-short" }
colorsnamed-best-of = { path = "crates/colorsnamed-best-of" }

[workspace.lints.rust]
unused = "warn"
unreachable_patterns = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -2 }
cargo = "warn"
manual_let_else = "warn"
uninlined_format_args = "warn"
