[package]
name = "colorsnamed-core"
version = "0.2.1"
edition = "2024"
description = "Color list: Build support for colorsnamed workspace"
license = "MIT"
repository = "https://github.com/philocalyst/color-names"
readme = "../../README.md"
keywords = ["color", "name", "list"]
categories = ["visualization", "multimedia"]

[dependencies]
num2words = "1.2.0"
csv = "1.3.1"
heck = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"

[lints]
workspace = true
