[package]
name = "colorsnamed-core"
version = "0.2.3"
edition = "2024"
description = "Color list: Build support for colorsnamed workspace"
license = "MIT"
repository = "https://github.com/philocalyst/color-names"
readme = "../../README.md"
keywords = ["color", "name", "list"]
categories = ["visualization", "multimedia"]

[dependencies]
num2words = { workspace = true }
csv = { workspace = true }
heck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
