[package]
name = "colorsnamed-japanese-traditional"
version = "0.2.1"
edition = "2024"
description = "Color list: Japanese traditional color names"
license = "MIT"
repository = "https://github.com/philocalyst/color-names"
readme = "../../README.md"
keywords = ["color", "name", "list"]
categories = ["visualization", "multimedia"]

[dependencies]
color = "0.3.2"
rgb = "0.8.50"
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]

[build-dependencies]
colorsnamed-core = { path = "../colorsnamed-core" }

[lints]
workspace = true
