[package]
name = "colorsnamed-spanish"
version = "0.2.3"
edition = "2024"
description = "Color list: Spanish color names"
license = "MIT"
repository = "https://github.com/philocalyst/color-names"
readme = "../../README.md"
keywords = ["color", "name", "list"]
categories = ["visualization", "multimedia"]

[dependencies]
color = { workspace = true }
rgb = { workspace = true }
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]

[build-dependencies]
colorsnamed-core = { workspace = true }

[lints]
workspace = true
