[package]
name = "colorsnamed"
description = "Names for a large set of widely understood color sets, like HTML/CSS or xkcd"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/philocalyst/color-names"
keywords = ["color", "name", "list"]
categories = ["visualization", "multimedia"]
version = "0.2.3"
edition = "2024"

[dependencies]
color = { workspace = true }
rgb = { workspace = true }
serde = { workspace = true, optional = true }

colorsnamed-basic = { workspace = true, optional = true }
colorsnamed-html = { workspace = true, optional = true }
colorsnamed-xkcd = { workspace = true, optional = true }
colorsnamed-x11 = { workspace = true, optional = true }
colorsnamed-ral = { workspace = true, optional = true }
colorsnamed-ridgway = { workspace = true, optional = true }
colorsnamed-werner = { workspace = true, optional = true }
colorsnamed-windows = { workspace = true, optional = true }
colorsnamed-wikipedia = { workspace = true, optional = true }
colorsnamed-french = { workspace = true, optional = true }
colorsnamed-spanish = { workspace = true, optional = true }
colorsnamed-german = { workspace = true, optional = true }
colorsnamed-hindi = { workspace = true, optional = true }
colorsnamed-risograph = { workspace = true, optional = true }
colorsnamed-chinese-traditional = { workspace = true, optional = true }
colorsnamed-japanese-traditional = { workspace = true, optional = true }
colorsnamed-le-corbusier = { workspace = true, optional = true }
colorsnamed-nbs-iscc = { workspace = true, optional = true }
colorsnamed-ntc = { workspace = true, optional = true }
colorsnamed-osxcrayons = { workspace = true, optional = true }
colorsnamed-sanzo-wada-i = { workspace = true, optional = true }
colorsnamed-thesaurus = { workspace = true, optional = true }
colorsnamed-complete = { workspace = true, optional = true }
colorsnamed-short = { workspace = true, optional = true }
colorsnamed-best-of = { workspace = true, optional = true }

[features]
default = ["basic"]
all = [
    "basic", "html", "xkcd", "x11", "ral", "ridgway", "werner",
    "windows", "wikipedia", "french", "spanish", "german", "hindi",
    "risograph", "chinese-traditional", "japanese-traditional",
    "le-corbusier", "nbs-iscc", "ntc", "osxcrayons", "sanzo-wada-i",
    "thesaurus", "complete", "short", "best-of",
]
basic = ["dep:colorsnamed-basic"]
html = ["dep:colorsnamed-html"]
xkcd = ["dep:colorsnamed-xkcd"]
x11 = ["dep:colorsnamed-x11"]
ral = ["dep:colorsnamed-ral"]
ridgway = ["dep:colorsnamed-ridgway"]
werner = ["dep:colorsnamed-werner"]
windows = ["dep:colorsnamed-windows"]
wikipedia = ["dep:colorsnamed-wikipedia"]
french = ["dep:colorsnamed-french"]
spanish = ["dep:colorsnamed-spanish"]
german = ["dep:colorsnamed-german"]
hindi = ["dep:colorsnamed-hindi"]
risograph = ["dep:colorsnamed-risograph"]
chinese-traditional = ["dep:colorsnamed-chinese-traditional"]
japanese-traditional = ["dep:colorsnamed-japanese-traditional"]
le-corbusier = ["dep:colorsnamed-le-corbusier"]
nbs-iscc = ["dep:colorsnamed-nbs-iscc"]
ntc = ["dep:colorsnamed-ntc"]
osxcrayons = ["dep:colorsnamed-osxcrayons"]
sanzo-wada-i = ["dep:colorsnamed-sanzo-wada-i"]
thesaurus = ["dep:colorsnamed-thesaurus"]
complete = ["dep:colorsnamed-complete"]
short = ["dep:colorsnamed-short"]
best-of = ["dep:colorsnamed-best-of"]
serde = [
    "dep:serde",
    "colorsnamed-basic?/serde",
    "colorsnamed-html?/serde",
    "colorsnamed-xkcd?/serde",
    "colorsnamed-x11?/serde",
    "colorsnamed-ral?/serde",
    "colorsnamed-ridgway?/serde",
    "colorsnamed-werner?/serde",
    "colorsnamed-windows?/serde",
    "colorsnamed-wikipedia?/serde",
    "colorsnamed-french?/serde",
    "colorsnamed-spanish?/serde",
    "colorsnamed-german?/serde",
    "colorsnamed-hindi?/serde",
    "colorsnamed-risograph?/serde",
    "colorsnamed-chinese-traditional?/serde",
    "colorsnamed-japanese-traditional?/serde",
    "colorsnamed-le-corbusier?/serde",
    "colorsnamed-nbs-iscc?/serde",
    "colorsnamed-ntc?/serde",
    "colorsnamed-osxcrayons?/serde",
    "colorsnamed-sanzo-wada-i?/serde",
    "colorsnamed-thesaurus?/serde",
    "colorsnamed-complete?/serde",
    "colorsnamed-short?/serde",
    "colorsnamed-best-of?/serde",
]

[lints]
workspace = true
